2003-05-17  Christian Ruppert <arc@users.sf.net>
	* autogen.sh: changed the order of gettextize and aclocal and added
	  new args for new gettext versions (don't know at which version they
	  changed the behavior, it's changed now and should work with
	  gettext 0.11.5 and later)
	* configure.in: removed intl/Makefile po/Makefile.in and po/Makefile
	  from AC_OUTPUT because gettextize now adds these files regardless
	  wether they are there or not which causes problems with
	  automake/autoconf.
	* acconfig.h: deleted because it is no longer needed with new versoins
	  of gnu autoconf/automake
	* configure.in: changed AC_DEFINEs and AC_DEFINE_UNQUOTEDs to
	  compensate for now missing acconfig.h
	* po/*.po: completed headers so that new msgfmt won't complain anymore.
	* uwm/Makefile.am: added test for bison pretending to be berkley yacc
	  which currently does not work.

2003-05-04  Christian Ruppert <arc@users.sf.net>
	* added po/Makevars

2003-04-17  Christian Ruppert <arc@users.sf.net>
	* uwm/handlers.c (HandleButtonPress): replaced XQueryPointer by
	  coordinate calculation from event structure.
	* uwm/move.c (MoveMotion): replaced XQueryPointer by coordinates
	  from event structure and XGetMotionEvents() call to get next motion
	  event.

2003-04-16  Christian Ruppert <arc@users.sf.net>
	* uwm/special.h: pointer grabs are now confined to the screen's root
	  window to avoid trouble with crashing xfree when running multiheaded
	  multiscreen.

2003-04-04  Christian Ruppert <arc@users.sf.net>
	* uwm/configconvertors.c: added derefptr macro and fixed uopt_str_fnt.
	* uwm/confparse.y: added prototype for workspace configuration
	  structure and index. parts of workspace configuration structure
	  need to be redefined, however (Wallpaper and ScreenCommand).
	* uwm/confparse.y (uwm_yy_PushContext): added initialisation of
	  uwm_workspace_settings (UWM_YY_WORKSPACE_CONTEXT).
	* uwm/confparse.y, uwm/init.c: moved definition of